# weather

./: Cargo.toml
src/: cli.rs  coordinate.rs  main.rs  request.rs  weather.rs
