[package]
name = "weather"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mockall = "0.12.1"
reqwest = { version = "0.11.23", features = ["json", "blocking"] }
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.111"
